tekton/load-test-manifests/automated-trigger/load-testing-pipeline-trigger-event-listener-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-git-trigger-for-load-testing-pipeline-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: fyp-ernest.store  
    http:
      paths:
        - path: /hooks/load-testing
          pathType: Exact
          backend:
            service:
              name: el-load-testing-pipeline-trigger-event-listener
              port:
                number: 8080
